przez pomylke zamiast na branchu pisalem w mainie jestem genialny, usprawnilem kilka rzeczy, glownie czytelnosc poprawilem

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,4 +25,4 @@ set_target_properties(NetSimApp PROPERTIES LINK_FLAGS "-Wl,--subsystem,console")
 
 
 enable_testing()
-#add_subdirectory(tests)
+add_subdirectory(tests)
